--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "chalk": "^5.2.0",
+    "console.table": "^0.10.0",
     "express": "^4.18.2",
     "inquirer": "^9.2.6",
     "mysql": "^2.18.1"
